# stage_exo3

exo3/: pyproject.toml
exo3/src/pokedex/: pokedex.py
exo3/test/: test.py
