[project]
name = "pokedex"
version = "1.0.0"
dependencies = [
   "pytest",
   "typer",
   "httpx",
   "logging",
   "rich"
]
requires-python = ">=3.11"
authors = [
  {name = "Kanounnikoff Martin", email = "mkanounnikoff@gmail.com"}
]
maintainers = [
  {name = "Kanounnikoff Martin", email = "mkanounnikoff@gmail.com"}
]
description = "A package to describe every pokemon"
readme = "README.md"
keywords = ["pokedex", "pokemon"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]